--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-ui": "^2.4.5",
+    "less": "^3.11.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
@@ -15,6 +17,9 @@
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
+    "babel-plugin-component": "^1.1.1",
+    "less-loader": "^6.2.0",
+    "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
